@@ -262,8 +262,8 @@
                     </focusedlayout>
                     <content>
                         <item id="1">
-                            <description>Ok Button</description>
-                            <label>186</label>
+                            <description>Ok / manual / getmore Button</description>
+                            <label>$INFO[control.getlabel(5)]</label>
                             <label2></label2>
                             <thumb>-</thumb>
                             <onclick>SendClick(2000,5)</onclick>
@@ -282,6 +282,7 @@
                     <control type="button" id="5">
                         <visible>false</visible>
                         <description>OK / Manual button</description>
+						<label>186</label>
                     </control>
                 </control>
             </control>
