@@ -35,14 +35,27 @@
                         <effect type="fade" start="0" end="100" time="300" />
                     </animation>
                     <!--source title-->
-                    <control type="label">
-                        <posx>0</posx>
+                    <control type="grouplist">
+						<posx>0</posx>
                         <posy>0</posy>
-                        <width>18-col</width>
-                        <font>pageTitle</font>
-                        <label>31123</label>
-                        <textcolor>selected</textcolor>
-                    </control>
+						<width>12-col</width>
+						<height>1-row</height>
+						<itemgap>0</itemgap>
+						<orientation>horizontal</orientation>
+						<control type="label">
+	                        <width>auto</width>
+	                        <font>pageTitle</font>
+	                        <label>31123</label>
+	                        <textcolor>selected</textcolor>
+	                    </control>
+						<control type="label">
+							<visible>Playlist.IsRandom</visible>
+	                        <width>auto</width>
+	                        <font>pageTitle</font>
+	                        <label> ($LOCALIZE[31133])</label>
+	                        <textcolor>accented</textcolor>
+	                    </control>
+					</control>
                     <!--source subtitle-->
                     <control type="label">
                         <posx>0</posx>
