@@ -207,7 +207,7 @@
                     <control type="label">
                         <posx>1-col</posx>
                         <posy>0</posy>
-                        <width>7-col-gutter</width>
+                        <width>9-col-gutter</width>
                         <font>itemTitle</font>
                         <textcolor>selected</textcolor>
                         <shadowcolor>-</shadowcolor>
@@ -268,7 +268,7 @@
                     <control type="label">
                         <posx>1-col</posx>
                         <posy>0</posy>
-                        <width>7-col-gutter</width>
+                        <width>9-col-gutter</width>
                         <font>itemTitle</font>
                         <textcolor>black</textcolor>
                         <selectedcolor>black</selectedcolor>
